# miniProyects

./: .gitignore  .gitmodules  TODO.md
Account-Apps/C-Inventary/: Makefile  main.c
Account-Apps/C-db1-Workers/: TODO.md  main.c
Account-Apps/C-db2-Students/: MINI_PROJECT_IN_C.c  Makefile
BasicWeb-I/: home.html
Blockchain/JS-smashingCoin/: chain.js  package-lock.json
Blockchain/TS-fireshipCoin/: package-lock.json  package.json  tsconfig.json
Blockchain/TS-fireshipCoin/src/: index.ts
Bots/: crypto_actual.py  first_telegram_bot.go  first_telegram_bot.py  get_stdout.py
Cli-Apps/C-Email_List/: Makefile  README.md  main.c
Cli-Apps/HS-Patient/: patient.hs
Cli-Apps/JS-Primer1/: index.js  package-lock.json  package.json
Cli-Apps/PY_cntlang/: '  pyproject.toml
Cli-Apps/PY_cntlang/cntlang/: __init__.py  __main__.py  app.py  cli.py
Cli-Apps/PY_cntlang/tests/: test_cntlang.py
Cli-Apps/Student-Record-Book/: MINI_PROJECT_IN_C.c
Cli-Apps/TS-todolist/: Makefile  package-lock.json  package.json
Cli-Apps/TS-todolist/src/: index.ts  jsonTodoCollection.ts  todoCollection.ts
Cli-Apps/cntlangs_rs/: '  Cargo.toml  README.md  cntlang_config.json
Cli-Apps/cntlangs_rs/src/: cli.rs  data.rs  lib.rs  main.rs
Cli-Apps/cpp_todoapp/: CMakeLists.txt  Doxygen  Justfile  compile_commands.json
Cli-Apps/cpp_todoapp/data/: output.txt
Cli-Apps/cpp_todoapp/src/: main.cpp
Cli-Apps/py_capacitytool/: README.md  README.rst  pyproject.toml
Cli-Apps/py_capacitytool/capacitytool/: main.py
Cli-Apps/py_capacitytool/tests/: test_py_capacitytool.py
Cli-Apps/py_pingchecker/: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
Cli-Apps/py_pingchecker/data/: sample-urls.txt
Cli-Apps/py_pingchecker/pingchecker/: __main__.py
Cli-Apps/py_pingchecker/py_checker/: __main__.py  checker.py  cli.py
Cli-Apps/py_tree/: pyproject.toml
Cli-Apps/py_tree/tree/: cli.py  core.py  main.py
Cli-Apps/rs_currencycalc/: Cargo.toml  valid_exp.md
Cli-Apps/rs_randomguess/: Cargo.toml  perf.data
Cli-Apps/rs_todoapp/: Cargo.toml  db.json  db.txt
Cli-Apps/rs_tree/: Cargo.toml
DataScience/WAChatAnalyzer/: Manifest.toml  Project.toml
DataScience/evolutive_rs/: Cargo.toml  pseudocode.md
DataScience/test_functions_rs/: Cargo.toml
FlaskApp/: flaskapp.yaml  login.html
FlaskApp/templates/: message.html
Games/: tictactoe.hs
Games/chess_rs/: Cargo.toml  TODO.md
Games/conway_rs/: Cargo.toml
Games/cpp_sdl/: compile_commands.json
Games/first_lua_game/: +  conf.lua  main.lua
Games/fst_godot/: project.godot
Games/second_lua_game/: main.lua
Games/snake_rs/: Cargo.toml
HaskellWApp/hawapp/: hawapp.cabal  package.yaml
Maths/Rust-Numerical/: Cargo.toml
MyGenieApp/: Project.toml  routes.jl
Others/HaskellTest/: Makefile  problems.md
Others/JDTest/: setup.sh
Others/JDTest/alternative/the_test/: Cargo.toml
Others/JohnDeereExam/: Makefile  benchmarks.sh  setup.sh
Others/TheTest/: Makefile  README.md
Others/rs_ascent/: Cargo.toml  modal_logic.md
Others/the_test/: setup.sh
PythonProj/Algorithms/: EuclidAlg.py  TeoProd.py  arrayFunk.py  contFractions.py  dampedW.py  deMoivre.py  numerical_integration.py  pascal.py  quadraticF.py
PythonProj/Algorithms/de_moivre_py/: pyproject.toml
PythonProj/Algorithms/de_moivre_py/de_moivre/: __main__.py  discrete_array.py
Robots/rubik-solver_py/: main.py  rubik_algebra.py  rubik_group.md
SystemsProg/: TODO.md
SystemsProg/browser_c/: Makefile  README.md
SystemsProg/c_protocolIP/: README.md
SystemsProg/extras/: Makefile  bidmaster.c  bidslave.c  sendtermios.py  ttyecho.c
SystemsProg/first_ross/: +  Cargo.toml  Makefile  bootrunner.sh  memorybits.md  metadata.yaml  x86_64-ross.json
SystemsProg/first_ross/.cargo/: config.toml
SystemsProg/first_ross/src/: allocator.rs  codepage437.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
SystemsProg/first_ross/src/allocator/: bump.rs  linked_list.rs
SystemsProg/first_ross/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
SystemsProg/lc3_vm/: Makefile  README.md  main.c
SystemsProg/lmc/: Cargo.toml  countdown.lmc
SystemsProg/rp2040_template/: Cargo.toml  openocd.gdb  setup.sh
SystemsProg/rp2040_template/.cargo/: config
SystemsProg/rp2040_template/src/: main.rs
SystemsProg/rs_commands/headr/: Cargo.toml  mk-outs.sh  mk-testfiles.sh
SystemsProg/rs_commands/headr/src/: lib.rs  main.rs
SystemsProg/rs_commands/headr/tests/inputs/: bustle.txt  spiders.txt
SystemsProg/rs_pkghunter/: Cargo.toml
SystemsProg/rs_simpleshell/: Cargo.toml
SystemsProg/vm_lc3/: Makefile  README.md  main.c
TextProcess/C-Text-Reader/: Makefile  test.txt  text_processor.c
TextProcess/LambdaCalcParser_hs/: lambdaparser.hs
TextProcess/Py-math_interpreter-1/: lexer.py  tokens.py
TextProcess/minigrep/: output.txt
TextProcess/monkeylang_go/: go.mod
TextProcess/pyinterpreter_py/: Makefile  README.md  README.md.txt  pyproject.toml
TextProcess/pyinterpreter_py/pyinterpreter/: __main__.py  cli.py  eval.py
TextProcess/rs_htmlparser/: Cargo.toml
WebPage/BasicCPP-WASM/: Makefile  bindings.cpp  cli.cpp  index.html  newtonraphson.cpp  newtonraphson.hpp
WebPage/FlaskApp/: script.py
WebPage/Svelte-digital_agency/: package-lock.json  package.json
WebPage/Svelte-prismicBasic/: package-lock.json  package.json
WebPage/TS-first/: package-lock.json  package.json  tsconfig.json
bassbull/: guide.txt
bassbull/src/: Main.hs
docker_pypg/: .container_id  Justfile  TODO.md  app.Dockerfile  compose.yaml  config.yaml  dev.Dockerfile
docker_pypg/migrations/: 20231228061325_create_employee_table.sql  20231228062233_create_products_table.sql
docker_pypg/mypy_server/: pyproject.toml
docker_pypg/mypy_server/mypy_server/: main.py
fst_project/: Cargo.toml
fst_project/src/: main.rs
hawapp/: ChangeLog.md  README.md  hawapp.cabal  package.yaml
hawapp/src/: Lib.hs
pyProjects/: EuclidAlg1.py  LibroCuentas.py  TeoProd.py  arrayFunk1.py
servantProj/: README.md  package.yaml
src/Domain/: auth.hs
(+150 files in other folders)
