[package]
name = "cntlangs"
version = "0.1.0"
edition = "2021"
authors = ["Danyiel Colin <amaniel2718@protonmail.com>"]

[lib]
path = "src/lib.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
clap = { version = "4.0.18", features = ["derive"] }
