[package]
name = "first_ross"
version = "0.1.0"
edition = "2018"
authors = ["Daniel Sanchez <amaniel2718@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
#libc = { version = "0.2.14", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
