[package]
name = "first_ross"
version = "0.1.0"
edition = "2018"
authors = ["Daniel Sanchez <amaniel2718@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.14"
x86_64 = "0.14.6"
volatile = "0.2.6"
#libc = { version = "0.2.14", default-features = false }

# [package.metadata.bootimage]
# run-command = ["qemu-system-x86_64", "-drive",
# 	"format=raw,file=target/x86_64-ross/debug/bootimage-first_ross.bin"]
# 
# [package.metadata.bootloader.target]
# target = "x86_64-ross.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
