[package]
name = "first_ross"
version = "0.1.0"
edition = "2018"
authors = ["Daniel Sanchez <amaniel2718@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.14"
x86_64 = "0.14.6"
volatile = "0.2.6"
spin = "0.5.2"
# initialize the UART and send data over the serial port
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
#libc = { version = "0.2.14", default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# [package.metadata.bootimage]
# run-command = ["qemu-system-x86_64", "-drive",
# 	"format=raw,file=target/x86_64-ross/debug/bootimage-first_ross.bin"]
# 
# [package.metadata.bootloader.target]
# target = "x86_64-ross.json"

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "stdio", "-display", "none"
	]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
