[tool.poetry]
name = "pyinterpreter"
version = "0.1.0"
description = "A toy Python bytecode interpreter"
authors = ["Danyiel Colin <danyiel5978@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
types-six = "^1.16.17"
six = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
